--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,6 @@ section {
 }
 
 .container_search .btn {
-
   margin: auto 10px;
 }
 
@@ -102,3 +101,45 @@ section button {
 .shelters {}
 
 .donations {}
+
+
+
+@media(max-width: 640px) {
+  main form {
+    padding: 40px;
+    margin: 40px 15px;
+  }
+  .menu-container {
+    position: absolute;
+    background: #00000050;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
+
+  .menu-mobile {
+    width: 80%;
+    background: white;
+    height: 100vh;
+    top: 0;
+    right: 0;
+    position: absolute;
+  }
+  .menu-mobile button {
+    background: none;
+    border: none;
+    color: black;
+    font-size: 30px;
+    margin: 10px 14px;
+  }
+
+  .menu-mobile section {
+    background: white;
+  }
+
+  .menu-mobile section a {
+    padding-left: 10px;
+    font-weight: 100;
+  }
+}
